--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ repositories {
 }
 
 base {
-    archivesName = mod_id
+    archivesName = mod_id+"-1.21.1-NeoForge-"
 }
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(21)
@@ -111,6 +111,8 @@ dependencies {
     }
     implementation "curse.maven:replication-638351:6941700"
     implementation "curse.maven:titanium-287342:6875285"
+    implementation "curse.maven:jei-238222:7181665"
+    implementation "curse.maven:jade-324717:6853386"
 }
 
 // This block of code expands all declared replace properties in the specified resource targets.
