--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ repositories {
 }
 
 base {
-    archivesName = mod_id+"-1.21.1-NeoForge-"
+    archivesName = mod_id+"-1.21.1-NeoForge"
 }
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(21)
